[package]
name = "pickup"
version = "0.1.0"
authors = ["aaron"]
edition = "2018"
description = "A CLI tool that helps you remember to buy things"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
dirs = "3.0.2"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.2.0"
